# F2X-SentinelHub

.claude/: settings.local.json
.docs/검토/: coordinate-system.md  overview.md
hardware/: schematic_design.md
hardware/kicad/: SentinelHub.kicad_pro  SentinelHub.kicad_sch
hardware/kicad/SentinelHub/: SentinelHub.kicad_prl  SentinelHub.kicad_pro  SentinelHub.kicad_sch
hardware/kicad/SentinelHub/SentinelHub/: SentinelHub.kicad_prl  SentinelHub.kicad_pro  SentinelHub.kicad_sch
simulation/: app.py  camera.py  cost_analysis.py  optimize_4cam.py  optimize_placement.py  pyproject.toml
simulation/configs/: camera_config (3).json  mlx90640_4cam_wd500.json
