[project]
name = "ir-camera-simulator"
version = "0.1.0"
description = "IR Camera Coverage Simulation for Battery Fire Detection"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.scripts]
run = "streamlit run app.py"
